--- a/wwwsrc/public/index.html
+++ b/wwwsrc/public/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-  <link rel="icon" href="https://bcw.blob.core.windows.net/public/img/9977764104160066" />
+  <script src="https://kit.fontawesome.com/e5c7f27a7a.js" crossorigin="anonymous"></script>
   <title>
-    wwwsrc
+    Keepr
   </title>
 </head>
 
