--- a/wwwsrc/public/index.html
+++ b/wwwsrc/public/index.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Montserrat&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/e5c7f27a7a.js" crossorigin="anonymous"></script>
   <title>
     Keepr
