--- a/wwwsrc/public/index.html
+++ b/wwwsrc/public/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Montserrat&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/e5c7f27a7a.js" crossorigin="anonymous"></script>
   <title>
-    Keepr
+    Keeper
   </title>
 </head>
 
